// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accepts any valid \`div\` attributes 1`] = `
<div
  aria-hidden="false"
  class="react-colorful"
  id="my-id"
>
  <div
    class="react-colorful__saturation"
    style="background-color: rgb(255, 0, 0);"
  >
    <div
      aria-label="Saturation and Brightness"
      aria-rowcount="100"
      role="grid"
    >
      <div
        aria-label="Brightness 0%"
        aria-rowindex="0"
        role="row"
      >
        <div
          aria-colcount="100"
          aria-colindex="0"
          aria-label="Saturation 0%"
          class="react-colorful__interactive"
          role="gridcell"
          tabindex="0"
        >
          <div
            class="react-colorful__pointer react-colorful__saturation-pointer"
            style="top: 100%; left: 0%;"
          >
            <div
              class="react-colorful__pointer-fill"
              style="background-color: rgb(0, 0, 0);"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="react-colorful__hue react-colorful__last-control"
  >
    <div
      aria-label="Hue"
      aria-valuemax="360"
      aria-valuemin="0"
      aria-valuenow="0"
      class="react-colorful__interactive"
      role="slider"
      tabindex="0"
    >
      <div
        class="react-colorful__pointer react-colorful__hue-pointer"
        style="top: 50%; left: 0%;"
      >
        <div
          class="react-colorful__pointer-fill"
          style="background-color: rgb(255, 0, 0);"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Renders \`HexColorInput\` component properly 1`] = `
<input
  class="custom-input"
  placeholder="AABBCC"
  spellcheck="false"
  value="F00"
/>
`;

exports[`Renders proper alpha color picker markup 1`] = `
<div
  class="react-colorful"
>
  <div
    class="react-colorful__saturation"
    style="background-color: rgb(255, 0, 0);"
  >
    <div
      aria-label="Saturation and Brightness"
      aria-rowcount="100"
      role="grid"
    >
      <div
        aria-label="Brightness 100%"
        aria-rowindex="100"
        role="row"
      >
        <div
          aria-colcount="100"
          aria-colindex="100"
          aria-label="Saturation 100%"
          class="react-colorful__interactive"
          role="gridcell"
          tabindex="0"
        >
          <div
            class="react-colorful__pointer react-colorful__saturation-pointer"
            style="top: 0%; left: 100%;"
          >
            <div
              class="react-colorful__pointer-fill"
              style="background-color: rgb(255, 0, 0);"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="react-colorful__hue"
  >
    <div
      aria-label="Hue"
      aria-valuemax="360"
      aria-valuemin="0"
      aria-valuenow="0"
      class="react-colorful__interactive"
      role="slider"
      tabindex="0"
    >
      <div
        class="react-colorful__pointer react-colorful__hue-pointer"
        style="top: 50%; left: 0%;"
      >
        <div
          class="react-colorful__pointer-fill"
          style="background-color: rgb(255, 0, 0);"
        />
      </div>
    </div>
  </div>
  <div
    class="react-colorful__alpha react-colorful__last-control"
  >
    <div
      class="react-colorful__alpha-gradient"
    />
    <div
      aria-label="Alpha"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="50"
      aria-valuetext="50%"
      class="react-colorful__interactive"
      role="slider"
      tabindex="0"
    >
      <div
        class="react-colorful__pointer react-colorful__alpha-pointer"
        style="top: 50%; left: 50%;"
      >
        <div
          class="react-colorful__pointer-fill"
          style="background-color: rgba(255, 0, 0, 0.5);"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Renders proper color picker markup 1`] = `
<div
  class="react-colorful"
>
  <div
    class="react-colorful__saturation"
    style="background-color: rgb(255, 0, 0);"
  >
    <div
      aria-label="Saturation and Brightness"
      aria-rowcount="100"
      role="grid"
    >
      <div
        aria-label="Brightness 100%"
        aria-rowindex="100"
        role="row"
      >
        <div
          aria-colcount="100"
          aria-colindex="100"
          aria-label="Saturation 100%"
          class="react-colorful__interactive"
          role="gridcell"
          tabindex="0"
        >
          <div
            class="react-colorful__pointer react-colorful__saturation-pointer"
            style="top: 0%; left: 100%;"
          >
            <div
              class="react-colorful__pointer-fill"
              style="background-color: rgb(255, 0, 0);"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="react-colorful__hue react-colorful__last-control"
  >
    <div
      aria-label="Hue"
      aria-valuemax="360"
      aria-valuemin="0"
      aria-valuenow="0"
      class="react-colorful__interactive"
      role="slider"
      tabindex="0"
    >
      <div
        class="react-colorful__pointer react-colorful__hue-pointer"
        style="top: 50%; left: 0%;"
      >
        <div
          class="react-colorful__pointer-fill"
          style="background-color: rgb(255, 0, 0);"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Works with no props 1`] = `
<div
  class="react-colorful"
>
  <div
    class="react-colorful__saturation"
    style="background-color: rgb(255, 0, 0);"
  >
    <div
      aria-label="Saturation and Brightness"
      aria-rowcount="100"
      role="grid"
    >
      <div
        aria-label="Brightness 0%"
        aria-rowindex="0"
        role="row"
      >
        <div
          aria-colcount="100"
          aria-colindex="0"
          aria-label="Saturation 0%"
          class="react-colorful__interactive"
          role="gridcell"
          tabindex="0"
        >
          <div
            class="react-colorful__pointer react-colorful__saturation-pointer"
            style="top: 100%; left: 0%;"
          >
            <div
              class="react-colorful__pointer-fill"
              style="background-color: rgb(0, 0, 0);"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="react-colorful__hue react-colorful__last-control"
  >
    <div
      aria-label="Hue"
      aria-valuemax="360"
      aria-valuemin="0"
      aria-valuenow="0"
      class="react-colorful__interactive"
      role="slider"
      tabindex="0"
    >
      <div
        class="react-colorful__pointer react-colorful__hue-pointer"
        style="top: 50%; left: 0%;"
      >
        <div
          class="react-colorful__pointer-fill"
          style="background-color: rgb(255, 0, 0);"
        />
      </div>
    </div>
  </div>
</div>
`;
